--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# --- Custom Ignores ---
+
+# Ignore trained models
+models/*
+
+# Ignore indexed data files
+data/*
